--- a/renovate.json
+++ b/renovate.json
@@ -1,56 +1,10 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "baseBranchPatterns": [
-        "main",
-        "/^backplane-2\\.\\d+$/"
-    ],
-    "packageRules": [
-        {
-            "matchManagers": [
-                "dockerfile"
-            ],
-            "enabled": false
-        },
-        {
-            "matchBaseBranches": [
-                "main",
-                "/^backplane-2\\.\\d+$/"
-            ],
-            "matchManagers": [
-                "tekton"
-            ],
-            "enabled": true,
-            "addLabels": [
-                "ok-to-test",
-                "approved",
-                "lgtm"
-            ]
-        },
-        {
-            "matchManagers": [
-                "gomod"
-            ],
-            "enabled": false,
-            "groupName": "go dependencies",
-            "groupSlug": "go-deps"
-        },
-        {
-            "matchManagers": [
-                "gomod"
-            ],
-            "matchDepTypes": [
-                "indirect"
-            ],
-            "enabled": false
-        }
-    ],
-    "rebaseWhen": "behind-base-branch",
-    "recreateWhen": "never",
-    "addLabels": [
-        "ok-to-test"
-    ],
-    "timezone": "Asia/Shanghai",
-    "schedule": [
-        "on monday"
-    ]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["github>konflux-ci/mintmaker//config/renovate/renovate.json"],
+  "labels": ["dependencies", "ok-to-test"],
+  "gomod": {
+    "enabled": false
+  },
+  "timezone": "Asia/Shanghai",
+  "schedule": ["on monday"]
 }
