--- a/Dockerfile.rhtap
+++ b/Dockerfile.rhtap
@@ -3,8 +3,7 @@ WORKDIR /go/src/github.com/stolostron/multicloud-operators-foundation
 COPY . .
 ENV GO_PACKAGE github.com/stolostron/multicloud-operators-foundation
 
-RUN make build --warn-undefined-variables
-RUN make build-e2e --warn-undefined-variables
+RUN XDG_CACHE_HOME=/tmp/cache make build --warn-undefined-variables
 
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
@@ -26,6 +25,5 @@ COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundatio
 COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundation/controller /
 COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundation/webhook /
 COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundation/agent /
-COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundation/e2e.test /
 
 USER ${USER_UID}
