Unify Tekton pipeline pathInRepo to common.yaml
Update pipelineRef pathInRepo from pipelines/common_mce_2.6.yaml to
pipelines/common.yaml to use the unified pipeline configuration across
all branches.

Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/.tekton/multicloud-manager-mce-26-push.yaml
+++ b/.tekton/multicloud-manager-mce-26-push.yaml
@@ -47,7 +47,7 @@ spec:
       - name: revision
         value: main
       - name: pathInRepo
-        value: pipelines/common_mce_2.6.yaml
+        value: pipelines/common.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-multicloud-manager-mce-26
   workspaces:
