--- a/.tekton/multicloud-manager-mce-28-pull-request.yaml
+++ b/.tekton/multicloud-manager-mce-28-pull-request.yaml
@@ -46,7 +46,7 @@ spec:
       - name: revision
         value: main
       - name: pathInRepo
-        value: pipelines/common_mce_2.8.yaml
+        value: pipelines/common.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-multicloud-manager-mce-28
   workspaces:
