--- a/.tekton/multicloud-manager-mce-29-push.yaml
+++ b/.tekton/multicloud-manager-mce-29-push.yaml
@@ -47,7 +47,7 @@ spec:
       - name: revision
         value: main
       - name: pathInRepo
-        value: pipelines/common_mce_2.9.yaml
+        value: pipelines/common.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-multicloud-manager-mce-29
   workspaces:
